--- a/index.html
+++ b/index.html
@@ -10,5 +10,105 @@
         <a href="html\Appliances.html">Appliances</a>
       </li>
     </h3>
+    <h3>
+      <li>
+        <a href="html\Beauty &amp; Personal Care.html">Beauty &amp; Personal Care</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Board Games.html">Board Games</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Boy Jewelry.html">Boy Jewelry</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Card Games.html">Card Games</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Electronics.html">Electronics</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Girl Jewelry.html">Girl Jewelry</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Handmade.html">Handmade</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Men Bags.html">Men Bags</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Men Hoodies.html">Men Hoodies</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Men Watches.html">Men Watches</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Office Products.html">Office Products</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Power Tools.html">Power Tools</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Sports &amp; Outdoors.html">Sports &amp; Outdoors</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Stuffed Animals &amp; Plush Toys.html">Stuffed Animals &amp; Plush Toys</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Tools &amp; Home Improvement.html">Tools &amp; Home Improvement</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Toys &amp; Games.html">Toys &amp; Games</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Women Bags &amp; Wallets.html">Women Bags &amp; Wallets</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Women Jewelry.html">Women Jewelry</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Women Necklaces &amp; Pendants.html">Women Necklaces &amp; Pendants</a>
+      </li>
+    </h3>
+    <h3>
+      <li>
+        <a href="html\Women Wallets.html">Women Wallets</a>
+      </li>
+    </h3>
   </body>
 </html>
